[workspace]
resolver = "2"
members = [
    "cell-cli",
    "cell-format",
    "cell-store",
    "cell-runtime",
    "cell-oci",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
