[package]
name = "cell-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "cell"
path = "src/main.rs"

[dependencies]
cell-format = { path = "../cell-format" }
cell-store = { path = "../cell-store" }
cell-runtime = { path = "../cell-runtime" }
cell-oci = { path = "../cell-oci" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs = "5"
colored = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
