[package]
name = "cell-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "cell"
path = "src/main.rs"

[dependencies]
cell-format = { path = "../cell-format" }
cell-store = { path = "../cell-store" }
cell-runtime = { path = "../cell-runtime" }
cell-oci = { path = "../cell-oci" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
